<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ResetPasswordFragment"
    android:background="@color/background_color"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:src="@drawable/reset_password_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/reset_password_title"
        android:textColor="@color/hint_text_color2"
        android:textSize="@dimen/headline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_welcome_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/reset_password_msg"
        android:textColor="@color/hint_text_color2"
        android:textSize="@dimen/body_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_reset_email"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="@dimen/elevation"
        android:textColorHint="@color/primary_color"
        android:theme="@style/EditTextThemeOverlay"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/corner_radius"
        app:boxCornerRadiusTopStart="@dimen/corner_radius"
        app:boxStrokeColor="@color/primary_color"
        app:boxStrokeWidth="0dp"
        app:endIconMode="clear_text"
        app:helperTextTextAppearance="@color/primary_color"
        app:hintTextAppearance="@color/hint_text_color"
        app:hintTextColor="@color/hint_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_welcome_reset_password"
        app:layout_constraintStart_toStartOf="@+id/tv_welcome_reset_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_reset_password"
        app:layout_constraintVertical_bias="0.041"
        app:startIconDrawable="@drawable/email_icon"
        app:startIconTint="@color/hint_text_color">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:isScrollContainer="false"
            android:maxLines="1"
            android:textColorHint="@color/hint_text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/btn_reset_password"
        app:layout_constraintEnd_toEndOf="@+id/et_reset_email"
        app:layout_constraintStart_toStartOf="@+id/et_reset_email"
        app:layout_constraintTop_toBottomOf="@+id/et_reset_email" />

    <TextView
        android:id="@+id/tv_reset_password_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text=""
        android:textColor="@color/results"
        android:textSize="@dimen/headline3"
        app:layout_constraintEnd_toEndOf="@+id/et_reset_email"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/et_reset_email"
        app:layout_constraintTop_toBottomOf="@+id/btn_reset_password" />
</androidx.constraintlayout.widget.ConstraintLayout>